fix spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -120,7 +120,7 @@ h4 {
 }
 
 .intro-text p:first-child {
-    margin-top: 0;
+    margin-top: 2em;
 }
 
 .intro-text h5:first-child {
